----------------------
phpMyAdmin - Changelog
----------------------

$Id$
$Source$

2004-05-23 Garvin Hicking <pma@supergarv.de>
    * db_details.php: Fixed broken file upload since redesign-patch.

2004-05-20 Michal Čihař  <michal@cihar.com>
    * many files: Little code reorganistaion (RFE #957308), removed some
      remaining php3 compatibility code in SQL parser.

2004-05-20 Marc Delisle  <lem9@users.sourceforge.net>
    * pdf_schema.php: set contents page (first page)'s orientation
      to the same asked for the data dictionary

2004-05-19 Marc Delisle  <lem9@users.sourceforge.net>
    * tbl_select.php: bug 956137, undefined $data: on the search page,
      PMA_foreignDropdown() must be called with no current value for
      the data

2004-05-19 Michal Čihař  <michal@cihar.com>
    * libraries/auth/cookie.auth.lib.php: Show login form in top frame.

2004-05-16 Alexander M. Turek  <me@derrabus.de>
    * db_details.php, db_details_structure.php, sql.php, tbl_indexes.php,
      tbl_properties_structure.php, tbl_query_box.php,
      images/b_dbstatistics.png, images/b_tbloptimize.png,
      images/b_useradd.png, images/b_usercheck.png, images/b_userdrop.png,
      images/b_useredit, libraries/display_tbl.lib.php,
      libraries/display_tbl_links.lib.php:
      Patch #947190 (Redesign) - Part 2, thanks to Michael Keck (mkkeck).
    * libraries/functions.js: Bugfix for (un)check all features if
      $cfg['ModifyAtLeft'] and $cfg['ModifyAtRight'] are enabled both, thanks
      to Michael Keck (mkkeck).
    * Documentation.html: Let's use a hyperlink instead of referring to the
      chapter, as the chaper numbers might change.

2004-05-14 Michal Čihař  <michal@cihar.com>
    * libraries/auth/cookie.auth.lib.php: Use one cookie set for each server,
      not just one global (patch #952917, bug #687009).

2004-05-13 Michal Čihař  <michal@cihar.com>
    * libraries/export/sql.php: Minor optimalisations.