@@ -18,7 +18,7 @@ if (!isset($pma_uri_parts)) {
     $cookie_path   = substr($pma_uri_parts['path'], 0, strrpos($pma_uri_parts['path'], '/'));
     $is_https      = (isset($pma_uri_parts['scheme']) && $pma_uri_parts['scheme'] == 'https') ? 1 : 0;
 }
-setcookie('lang', $lang, time() + 60*60*24*30, $cookie_path, '', $is_https);
+setcookie('pma_lang', $lang, time() + 60*60*24*30, $cookie_path, '', $is_https);
 // Defines the "item" image depending on text direction
 $item_img = './images/dot_violet.png';
 // Handles some variables that may have been sent by the calling script
